can setup an external project + resizable console GUI

--- a/Tools/Template/starter.csproj
+++ b/Tools/Template/starter.csproj
@@ -73,7 +73,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <EmbeddedResource Include="Resources\directory.inf" />
+    <EmbeddedResource Include="directory.inf" />
   </ItemGroup>
   
   <ItemGroup>
