--- a/Tools/Template/starter.csproj
+++ b/Tools/Template/starter.csproj
@@ -36,23 +36,14 @@
   
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-	  <Reference Include="System.Windows" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="System.Xml" />
-	  <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\WindowsPowerShell\3.0\System.Management.Automation.dll</HintPath>
-    </Reference>
   </ItemGroup>
   
   <ItemGroup>
     <Compile Include="Program.cs" />
+	  <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   
   <ItemGroup>
